Ignore some cmake generated files
Change-Id: Ieefe8bd422e22ccc848529bdeaa32fec535d4fc8
Reviewed-by: Simon Hausmann <simon.hausmann@qt.io>

--- a/.gitignore
+++ b/.gitignore
@@ -297,3 +297,12 @@ src/qml/qml_compile_hash_p.h
 # Compiled QML/JS code
 *.qmlc
 *.jsc
+
+# cmake related artifacts
+/build*
+CMakeFiles
+CTestTestfile.cmake
+cmake_install.cmake
+*_autogen
+tst_*.xml
+
