Include qjsengine and qjsvalue autotests in the cmake build
This looks like a bug in the pro2cmake tool. It somehow didn't
include those two test cases in the build. Modifying the pro
file slightly makes pro2cmake add them.

Change-Id: If6215f111494d0912e590428a0f4ca2c3b653856
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>

--- a/tests/auto/qml/qjsengine/CMakeLists.txt
+++ b/tests/auto/qml/qjsengine/CMakeLists.txt
@@ -10,15 +10,20 @@ file(GLOB_RECURSE test_data_glob
     script/*)
 list(APPEND test_data ${test_data_glob})
 
+qt_find_package(Threads PROVIDED_TARGETS Threads::Threads) # special case
+
 qt_add_test(tst_qjsengine
     SOURCES
         tst_qjsengine.cpp
     PUBLIC_LIBRARIES
+        Qt::Core
         Qt::Gui
         Qt::GuiPrivate
         Qt::Qml
         Qt::QmlPrivate
         Qt::Widgets
+    LIBRARIES # special case
+        Threads::Threads # special case
     TESTDATA ${test_data}
 )
 
