--- a/tests/auto/qml/qjsvalue/CMakeLists.txt
+++ b/tests/auto/qml/qjsvalue/CMakeLists.txt
@@ -4,6 +4,8 @@
 ## tst_qjsvalue Test:
 #####################################################################
 
+qt_find_package(Threads PROVIDED_TARGETS Threads::Threads) # special case
+
 qt_add_test(tst_qjsvalue
     SOURCES
         tst_qjsvalue.cpp tst_qjsvalue.h
@@ -13,6 +15,8 @@ qt_add_test(tst_qjsvalue
         Qt::Qml
         Qt::QmlPrivate
         Qt::Widgets
+    LIBRARIES # special case
+        Threads::Threads # special case
 )
 
 ## Scopes:
