Remove leftover legacy shader files in scenegraph example
Task-number: QTBUG-82997
Change-Id: Icc328394154d7b352c9f47184c2f906d5afa4d44
Reviewed-by: Andy Nichols <andy.nichols@qt.io>

--- a/examples/quick/scenegraph/twotextureproviders/CMakeLists.txt
+++ b/examples/quick/scenegraph/twotextureproviders/CMakeLists.txt
@@ -31,12 +31,9 @@ target_link_libraries(twotextureproviders PUBLIC
 # Resources:
 set(twotextureproviders_resource_files
     "main.qml"
-    "shaders/+qsb/checker.frag"
-    "shaders/+qsb/xorblender.frag"
-    "shaders/+qsb/xorblender.vert"
-    "shaders/checker.frag"
-    "shaders/xorblender.frag"
-    "shaders/xorblender.vert"
+    "shaders/checker.frag.qsb"
+    "shaders/xorblender.frag.qsb"
+    "shaders/xorblender.vert.qsb"
 )
 
 qt6_add_resources(twotextureproviders "twotextureproviders"
