Update graph example CMake
Also update OTHER_FILES in the .pro although that's not strictly
required for building.

Change-Id: Ib48e64b298c1a7b1600ecd1f13580398679b72a2
Reviewed-by: Laszlo Agocs <laszlo.agocs@qt.io>

--- a/examples/quick/scenegraph/graph/CMakeLists.txt
+++ b/examples/quick/scenegraph/graph/CMakeLists.txt
@@ -32,10 +32,10 @@ target_link_libraries(graph PUBLIC
 # Resources:
 set(graph_resource_files
     "main.qml"
-    "shaders/line.fsh"
-    "shaders/line.vsh"
-    "shaders/noisy.fsh"
-    "shaders/noisy.vsh"
+    "shaders/line.frag.qsb"
+    "shaders/line.vert.qsb"
+    "shaders/noisy.frag.qsb"
+    "shaders/noisy.vert.qsb"
 )
 
 qt6_add_resources(graph "graph"
