CMake: Copy builtins.qmltypes to QML import path in non-prefix builds
Previously the file was copied to qtdeclarative/src/builtins due to
a missing QT_INSTALL_DIR.

Now it will be copied to qtbase_built/qml.

Change-Id: Icb392559c749b1a460763ac986269053d8050f0f
Reviewed-by: Leander Beernaert <leander.beernaert@qt.io>
Reviewed-by: Alexandru Croitor <alexandru.croitor@qt.io>

--- a/src/imports/builtins/CMakeLists.txt
+++ b/src/imports/builtins/CMakeLists.txt
@@ -4,8 +4,9 @@
 
 set(qml_type_file builtins.qmltypes)
 
+qt_path_join(qml_install_dir "${QT_INSTALL_DIR}" "${INSTALL_QMLDIR}")
 qt_copy_or_install(FILES ${qml_type_file}
-    DESTINATION ${INSTALL_QMLDIR}
+    DESTINATION ${qml_install_dir}
 )
 
 if (NOT CMAKE_CROSSCOMPILING)
