Re-arrange qv4identifier{_p.h|.cpp}
QV4::IdentifierHashData doesn't need to be visible to all the clients.
Furthermore, it can be completely inline. The public functions of
QV4::IdentifierHash need to be out of line, but the private ones can be
all inline. This shouldn't make much of a difference as most of the
public functions call at least one private function. Finally, the files
should be named by the class names.

Change-Id: I931f2aa71103e41fdd3dae9cc47d204edece0e12
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>

--- a/src/qml/CMakeLists.txt
+++ b/src/qml/CMakeLists.txt
@@ -105,7 +105,8 @@ qt_add_module(Qml
         jsruntime/qv4generatorobject.cpp jsruntime/qv4generatorobject_p.h
         jsruntime/qv4global_p.h
         jsruntime/qv4globalobject.cpp jsruntime/qv4globalobject_p.h
-        jsruntime/qv4identifier.cpp jsruntime/qv4identifier_p.h
+        jsruntime/qv4identifierhash.cpp jsruntime/qv4identifierhash_p.h
+        jsruntime/qv4identifierhashdata_p.h
         jsruntime/qv4identifiertable.cpp jsruntime/qv4identifiertable_p.h
         jsruntime/qv4include.cpp jsruntime/qv4include_p.h
         jsruntime/qv4internalclass.cpp jsruntime/qv4internalclass_p.h
