Port type registrar test to cmake
Unfortunately, the type registrar simply does not work with  manually
moced files, and headers without any extension are not picked up by
automoc.

Task-number: QTBUG-84869
Task-number: QTBUG-84906
Change-Id: If1adbb9bfb3f793f3ee90f5b27cece233e354443
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>

--- a/tests/auto/qml/CMakeLists.txt
+++ b/tests/auto/qml/CMakeLists.txt
@@ -97,5 +97,5 @@ if(QT_FEATURE_private_tests)
     add_subdirectory(qqmldelegatemodel) # special case
 endif()
 if(NOT CMAKE_CROSSCOMPILING)
-    # add_subdirectory(qmltyperegistrar) # special case need to port
+    add_subdirectory(qmltyperegistrar)
 endif()
