CMake: Adjust and regenerate tools project
Checking for android_app scope does not make sense in subdirs
projects, it's expected that it is explicitly set as CONFIG +=
android_app in a standalone executable project. When the config
is set, instead of creating an .so file, a true Android CLI
executable is created.

This is seemingly a relic from a time when there existed an
Android mkspec that allowed building Qt without the .so
requirement.

Thus remove the android_app scope.

Also exchange the static scope, with a contains(CONFIG, static)
scope, so that pro2cmake can deal with the condition better.

Keep the qmlcachegen target commented, due to it being built
in the src project.

Finally regenerate the CMake project, to exclude certain apps
being built by default, thus fixing failures when building a
simulator_and_device iOS configuration.

Task-number: QTBUG-80899
Change-Id: Ief89d85c3a238c4a002ab6d98ee2596508cf130b
Reviewed-by: Simon Hausmann <hausmann@gmail.com>

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -1,53 +1,46 @@
 # Generated from tools.pro.
 
 
+qt_exclude_tool_directories_from_default_target(
+    qmlprofiler
+    qmlplugindump
+    qmleasing
+)
+
 if(QT_FEATURE_qml_devtools)
     add_subdirectory(qmllint)
     add_subdirectory(qmlimportscanner)
     add_subdirectory(qmlformat)
-    # special case: Do not build qmlcachegen here but build it at src/
+endif()
+if(QT_FEATURE_qml_devtools AND QT_FEATURE_xmlstreamwriter)
+    # special case begin
+    # Do not build qmlcachegen here but build it at src/
     # time, so that we can use it for our own .qml files in src/imports.
+    # add_subdirectory(qmlcachegen)
+    # special case end
 endif()
-
-if(QT_FEATURE_thread AND NOT ANDROID OR android_app AND NOT WASM AND NOT rtems)
+if(QT_FEATURE_thread AND NOT ANDROID AND NOT WASM AND NOT rtems)
     add_subdirectory(qml)
-
-    if(QT_FEATURE_qml_profiler)
-        add_subdirectory(qmlprofiler)
-    endif()
-
-    if(QT_FEATURE_qml_preview)
-        add_subdirectory(qmlpreview)
-    endif()
-
-    if(TARGET Qt::Quick)
-
-        if(BUILD_SHARED_LIBS) # special case
-            add_subdirectory(qmlscene)
-            add_subdirectory(qmltime)
-
-            if(QT_FEATURE_regularexpression AND QT_FEATURE_process)
-                add_subdirectory(qmlplugindump)
-            endif()
-        endif()
-
-        if(TARGET Qt::Widgets)
-
-            if(QT_FEATURE_dialogbuttonbox)
-                add_subdirectory(qmleasing)
-            endif()
-        endif()
-    endif()
-
-    if(TARGET Qt::QuickTest)
-        add_subdirectory(qmltestrunner)
-    endif()
-
-    if(QT_FEATURE_private_tests)
-        add_subdirectory(qmljs)
-    endif()
 endif()
-
-if(QT_FEATURE_qml_devtools)
+if(QT_FEATURE_qml_profiler AND QT_FEATURE_thread AND NOT ANDROID AND NOT WASM AND NOT rtems)
+    add_subdirectory(qmlprofiler)
 endif()
-
+if(QT_FEATURE_qml_preview AND QT_FEATURE_thread AND NOT ANDROID AND NOT WASM AND NOT rtems)
+    add_subdirectory(qmlpreview)
+endif()
+if(QT_BUILD_SHARED_LIBS AND QT_FEATURE_thread AND TARGET Qt::Quick AND NOT ANDROID AND NOT WASM AND NOT rtems)
+    add_subdirectory(qmlscene)
+    add_subdirectory(qmltime)
+endif()
+if(QT_BUILD_SHARED_LIBS AND QT_FEATURE_process AND QT_FEATURE_regularexpression AND QT_FEATURE_thread AND TARGET Qt::Quick AND NOT ANDROID AND NOT WASM AND NOT rtems)
+    add_subdirectory(qmlplugindump)
+endif()
+if(QT_FEATURE_dialogbuttonbox AND QT_FEATURE_thread AND TARGET Qt::Quick AND TARGET Qt::Widgets AND NOT ANDROID AND NOT WASM AND NOT rtems)
+    add_subdirectory(qmleasing)
+endif()
+if(QT_FEATURE_thread AND TARGET Qt::QuickTest AND NOT ANDROID AND NOT WASM AND NOT rtems)
+    add_subdirectory(qmltestrunner)
+endif()
+if(QT_FEATURE_private_tests AND QT_FEATURE_thread AND NOT ANDROID AND NOT WASM AND NOT rtems)
+    add_subdirectory(qmljs)
+endif()
