Don't hardcode the include directory name
There's no guarantee that include files will be installed into 'include/'.
Use INSTALL_INCLUDEDIR instead which can be changed when running CMake.

Change-Id: I9af9fbdabd0b317a255f6c3e9e77af4ddf0792a9
Reviewed-by: Alexandru Croitor <alexandru.croitor@qt.io>

--- a/src/qmldevtools/CMakeLists.txt
+++ b/src/qmldevtools/CMakeLists.txt
@@ -84,9 +84,9 @@ if(QT_FEATURE_framework)
         )
 else()
     set(_qml_dev_tools_public_includes
-            $<INSTALL_INTERFACE:include/${qml_module}>
-            $<INSTALL_INTERFACE:include/${qml_module}/${PROJECT_VERSION}>
-            $<INSTALL_INTERFACE:include/${qml_module}/${PROJECT_VERSION}/${qml_module}>
+            $<INSTALL_INTERFACE:${INSTALL_INCLUDEDIR}/${qml_module}>
+            $<INSTALL_INTERFACE:${INSTALL_INCLUDEDIR}/${qml_module}/${PROJECT_VERSION}>
+            $<INSTALL_INTERFACE:${INSTALL_INCLUDEDIR}/${qml_module}/${PROJECT_VERSION}/${qml_module}>
         )
 endif()
 target_include_directories(QmlDevTools PRIVATE ${_qml_dev_tools_public_includes})
