Fix up the scenegraph/textureinthread example
Force OpenGL, remove the ShaderEffect (it serves no purpose in this
example) and remove deprecated API usage.

Finally, rename the example to opengltextureinthread.

Note that the example's performance is sub-par, but the same is true
with direct OpenGL.

Change-Id: I7eaa2349ffdb3d27bd9e8815d674e918bc709c03
Reviewed-by: Eirik Aavitsland <eirik.aavitsland@qt.io>

--- a/examples/quick/scenegraph/opengltextureinthread/CMakeLists.txt
+++ b/examples/quick/scenegraph/opengltextureinthread/CMakeLists.txt
@@ -1,7 +1,7 @@
-# Generated from textureinthread.pro.
+# Generated from opengltextureinthread.pro.
 
 cmake_minimum_required(VERSION 3.14)
-project(textureinthread LANGUAGES CXX)
+project(opengltextureinthread LANGUAGES CXX)
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
@@ -9,22 +9,26 @@ set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
 set(CMAKE_AUTOUIC ON)
 
-set(INSTALL_EXAMPLEDIR "examples/quick/scenegraph/textureinthread")
+if(NOT DEFINED INSTALL_EXAMPLESDIR)
+  set(INSTALL_EXAMPLESDIR "examples")
+endif()
+
+set(INSTALL_EXAMPLEDIR "${INSTALL_EXAMPLESDIR}/quick/scenegraph/opengltextureinthread")
 
 find_package(Qt6 COMPONENTS Core)
 find_package(Qt6 COMPONENTS Gui)
 find_package(Qt6 COMPONENTS Quick)
 
-add_qt_gui_executable(textureinthread
+add_qt_gui_executable(opengltextureinthread
     ../shared/logorenderer.cpp ../shared/logorenderer.h
     main.cpp
     threadrenderer.cpp threadrenderer.h
 )
-target_include_directories(textureinthread PUBLIC
+target_include_directories(opengltextureinthread PUBLIC
     ../shared
 )
 
-target_link_libraries(textureinthread PUBLIC
+target_link_libraries(opengltextureinthread PUBLIC
     Qt::Core
     Qt::CorePrivate
     Qt::Gui
@@ -39,23 +43,23 @@ set(textureinthread_resource_files
     "main.qml"
 )
 
-qt6_add_resources(textureinthread "textureinthread"
+qt6_add_resources(opengltextureinthread "textureinthread"
     PREFIX
         "/scenegraph/textureinthread"
     FILES
         ${textureinthread_resource_files}
 )
 
-install(TARGETS textureinthread
+install(TARGETS opengltextureinthread
     RUNTIME DESTINATION "${INSTALL_EXAMPLEDIR}"
     BUNDLE DESTINATION "${INSTALL_EXAMPLEDIR}"
     LIBRARY DESTINATION "${INSTALL_EXAMPLEDIR}"
 )
 
-set_target_properties(textureinthread PROPERTIES
+set_target_properties(opengltextureinthread PROPERTIES
     QT_QML_MODULE_INSTALL_QMLTYPES TRUE
     QT_QML_MODULE_VERSION 1.0
     QT_QML_MODULE_URI SceneGraphRendering
 )
 
-qt6_qml_type_registration(textureinthread)
+qt6_qml_type_registration(opengltextureinthread)
