--- a/examples/quick/scenegraph/CMakeLists.txt
+++ b/examples/quick/scenegraph/CMakeLists.txt
@@ -7,7 +7,7 @@ if(QT_FEATURE_opengl OR QT_FEATURE_opengles2 OR QT_FEATURE_opengles3)
     add_subdirectory(graph)
     add_subdirectory(fboitem)
     add_subdirectory(openglunderqml)
-    add_subdirectory(textureinthread)
+    add_subdirectory(opengltextureinthread)
     add_subdirectory(twotextureproviders)
 endif()
 if(MACOS)
