Remove Qt Labs Calendar
This is getting its own repository as part of the move to the
marketplace.

Task-number: QTBUG-84172
Pick-to: 5.15
Change-Id: I2f963c298d6ef95e0832f95aa1e1ea809f4867a2
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>

--- a/src/imports/controls/CMakeLists.txt
+++ b/src/imports/controls/CMakeLists.txt
@@ -71,7 +71,7 @@ qt_add_resource(qtquickcontrols2plugin "qtquickcontrols2plugin"
 
 #### Keys ignored in scope 1:.:.:controls.pro:<TRUE>:
 # IMPORT_VERSION = "2.$$QT_MINOR_VERSION"
-# OTHER_FILES = "qmldir" "$$QML_FILES" "$$PWD/snippets/*.qml" "$$PWD/src/*.qdoc" "$$PWD/src/calendar/*.qdoc" "$$PWD/src/templates/*.qdoc"
+# OTHER_FILES = "qmldir" "$$QML_FILES" "$$PWD/snippets/*.qml" "$$PWD/src/*.qdoc" "$$PWD/src/templates/*.qdoc"
 # TARGETPATH = "QtQuick/Controls.2"
 # _REQUIREMENTS = "qtConfig(quickcontrols2-default)"
 
