--- a/tests/auto/qquickcontrol/CMakeLists.txt
+++ b/tests/auto/qquickcontrol/CMakeLists.txt
@@ -1,11 +1,7 @@
-# Generated from accessibility.pro.
-
-if(NOT QT_FEATURE_accessibility)
-    return()
-endif()
+# Generated from qquickcontrol.pro.
 
 #####################################################################
-## tst_accessibility Test:
+## tst_qquickcontrol Test:
 #####################################################################
 
 # Collect test data
@@ -14,12 +10,12 @@ file(GLOB_RECURSE test_data_glob
     data/*)
 list(APPEND test_data ${test_data_glob})
 
-qt_add_test(tst_accessibility
+qt_add_test(tst_qquickcontrol
     SOURCES
         ../shared/qtest_quickcontrols.h
         ../shared/util.cpp ../shared/util.h
         ../shared/visualtestutil.cpp ../shared/visualtestutil.h
-        tst_accessibility.cpp
+        tst_qquickcontrol.cpp
     DEFINES
         QQC2_IMPORT_PATH=\\\"${CMAKE_CURRENT_SOURCE_DIR}/../../../src/imports\\\"
     PUBLIC_LIBRARIES
@@ -34,19 +30,18 @@ qt_add_test(tst_accessibility
     TESTDATA ${test_data}
 )
 
-#### Keys ignored in scope 1:.:.:accessibility.pro:<TRUE>:
+#### Keys ignored in scope 1:.:.:qquickcontrol.pro:<TRUE>:
 # OTHER_FILES = "data/*.qml"
-# _REQUIREMENTS = "qtConfig(accessibility)"
 
 ## Scopes:
 #####################################################################
 
-qt_extend_target(tst_accessibility CONDITION ANDROID OR IOS
+qt_extend_target(tst_qquickcontrol CONDITION ANDROID OR IOS
     DEFINES
         QT_QMLTEST_DATADIR=\\\":/data\\\"
 )
 
-qt_extend_target(tst_accessibility CONDITION NOT ANDROID AND NOT IOS
+qt_extend_target(tst_qquickcontrol CONDITION NOT ANDROID AND NOT IOS
     DEFINES
         QT_QMLTEST_DATADIR=\\\"${CMAKE_CURRENT_SOURCE_DIR}/data\\\"
 )
