Fix qmltypes file names for qmltypes built from libraries
We still expect those to be called "plugins.qmltypes" in a few places.

Change-Id: I751b2bb9ca264fb7998d11c2f969ee46b32fb2cb
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>

--- a/src/qml/CMakeLists.txt
+++ b/src/qml/CMakeLists.txt
@@ -627,6 +627,7 @@ set_target_properties(Qml PROPERTIES
     QT_QML_MODULE_VERSION ${CMAKE_PROJECT_VERSION}
     QT_QML_MODULE_URI QtQml
     QT_QML_MODULE_INSTALL_DIR "${INSTALL_QMLDIR}/QtQml"
+    QT_QMLTYPES_FILENAME "plugins.qmltypes"
 )
 
 qt6_qml_type_registration(Qml)
