--- a/src/quick/CMakeLists.txt
+++ b/src/quick/CMakeLists.txt
@@ -617,6 +617,7 @@ set_target_properties(Quick PROPERTIES
     QT_QML_MODULE_VERSION ${CMAKE_PROJECT_VERSION}
     QT_QML_MODULE_URI QtQuick
     QT_QML_MODULE_INSTALL_DIR "${INSTALL_QMLDIR}/QtQuick"
+    QT_QMLTYPES_FILENAME "plugins.qmltypes"
 )
 
 qt6_qml_type_registration(Quick)
