--- a/src/qmltest/CMakeLists.txt
+++ b/src/qmltest/CMakeLists.txt
@@ -69,6 +69,7 @@ set_target_properties(QuickTest PROPERTIES
     QT_QML_MODULE_VERSION 1.0
     QT_QML_MODULE_URI Qt.test.qtestroot
     QT_QML_MODULE_INSTALL_DIR "${INSTALL_QMLDIR}/Qt/test/qtestroot"
+    QT_QMLTYPES_FILENAME "plugins.qmltypes"
 )
 
 qt6_qml_type_registration(QuickTest)
