Add missing CMake project for vulkantextureimport
...and enable vulkanunderqml and vulkantextureimport in the CMakeLists
one level up.

Change-Id: I91d659e028b0e7f53b5860bbfbdbb98c18e333c7
Reviewed-by: Alexandru Croitor <alexandru.croitor@qt.io>

--- a/examples/quick/scenegraph/CMakeLists.txt
+++ b/examples/quick/scenegraph/CMakeLists.txt
@@ -18,5 +18,6 @@ if(WIN32)
     add_subdirectory(d3d11underqml)
 endif()
 if(QT_FEATURE_vulkan)
-    #add_subdirectory(vulkanunderqml) # special case not yet converted
+    add_subdirectory(vulkanunderqml)
+    add_subdirectory(vulkantextureimport)
 endif()
