Account for single key shortcuts being used in the platform menus
When a single key shortcut is used then it does not go through the
usual channels for triggering. Therefore it needs to be registered as a
shortcut so it can be picked up when sent as a Shortcut event.

Pick-to: 5.15
Change-Id: I93a48c633e1051f142b884d78bbca181c778f7b9
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>

--- a/src/imports/platform/CMakeLists.txt
+++ b/src/imports/platform/CMakeLists.txt
@@ -33,6 +33,7 @@ qt_add_qml_module(qtlabsplatformplugin
         Qt::GuiPrivate
         Qt::QmlPrivate
         Qt::QuickPrivate
+        Qt::QuickTemplates2Private
     PUBLIC_LIBRARIES
         Qt::Core
         Qt::Gui
