Skip d3d rendercontrol example on MinGW
We will not invest into adding workarounds in the example code
as the boilerplate to keep such unofficial environments working is
not worth the effort and compromises readability in example code.
Just skip building on MinGW.

Change-Id: If33bd0382f8cab4713ad45fcaa126830e9760af3
Reviewed-by: Liang Qi <liang.qi@qt.io>

--- a/examples/quick/rendercontrol/CMakeLists.txt
+++ b/examples/quick/rendercontrol/CMakeLists.txt
@@ -1,3 +1,6 @@
 # Generated from rendercontrol.pro.
 
 add_subdirectory(rendercontrol_opengl)
+if(WIN32 AND NOT MINGW)
+    add_subdirectory(rendercontrol_d3d11)
+endif()
