CMake: Regenerate qtdeclarative/src
Includes
 - renaming of internal plugin api call
 - generation of QT_QMLTYPES_FILENAME
 - addition of a few TARGET_DESCRIPTION

Change-Id: I72b5647b8c16af9945795ead62a075322b6bb2f6
Reviewed-by: Joerg Bornemann <joerg.bornemann@qt.io>

--- a/src/plugins/qmltooling/qmldbg_debugger/CMakeLists.txt
+++ b/src/plugins/qmltooling/qmldbg_debugger/CMakeLists.txt
@@ -4,7 +4,7 @@
 ## QQmlDebuggerServiceFactory Plugin:
 #####################################################################
 
-qt_add_plugin(QQmlDebuggerServiceFactory
+qt_internal_add_plugin(QQmlDebuggerServiceFactory
     OUTPUT_NAME qmldbg_debugger
     TYPE qmltooling
     SOURCES
