--- a/src/plugins/qmltooling/qmldbg_preview/CMakeLists.txt
+++ b/src/plugins/qmltooling/qmldbg_preview/CMakeLists.txt
@@ -4,7 +4,7 @@
 ## QQmlPreviewServiceFactory Plugin:
 #####################################################################
 
-qt_add_plugin(QQmlPreviewServiceFactory
+qt_internal_add_plugin(QQmlPreviewServiceFactory
     OUTPUT_NAME qmldbg_preview
     TYPE qmltooling
     SOURCES
