--- a/src/plugins/qmltooling/qmldbg_server/CMakeLists.txt
+++ b/src/plugins/qmltooling/qmldbg_server/CMakeLists.txt
@@ -4,7 +4,7 @@
 ## QQmlDebugServerFactory Plugin:
 #####################################################################
 
-qt_add_plugin(QQmlDebugServerFactory
+qt_internal_add_plugin(QQmlDebugServerFactory
     OUTPUT_NAME qmldbg_server
     TYPE qmltooling
     SOURCES
