--- a/src/plugins/qmltooling/qmldbg_tcp/CMakeLists.txt
+++ b/src/plugins/qmltooling/qmldbg_tcp/CMakeLists.txt
@@ -4,7 +4,7 @@
 ## QTcpServerConnectionFactory Plugin:
 #####################################################################
 
-qt_add_plugin(QTcpServerConnectionFactory
+qt_internal_add_plugin(QTcpServerConnectionFactory
     OUTPUT_NAME qmldbg_tcp
     TYPE qmltooling
     SOURCES
