--- a/src/plugins/qmltooling/qmldbg_inspector/CMakeLists.txt
+++ b/src/plugins/qmltooling/qmldbg_inspector/CMakeLists.txt
@@ -4,7 +4,7 @@
 ## QQmlInspectorServiceFactory Plugin:
 #####################################################################
 
-qt_add_plugin(QQmlInspectorServiceFactory
+qt_internal_add_plugin(QQmlInspectorServiceFactory
     OUTPUT_NAME qmldbg_inspector
     TYPE qmltooling
     SOURCES
